--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -223,10 +223,14 @@
 
 		&__grid {
 			display: grid;
-			grid-template-columns: repeat(auto-fill, minmax(25em, 1fr));
+			grid-template-columns: 1fr;
 			gap: 2rem;
 			margin-block: 3rem;
 			width: 100%;
+
+			@include mq(medium) {
+				grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+			}
 		}
 
 		&__no-projects {
